# xlsx-aggregator

./: .gitignore  PLAN.md  README.md  build.bat  pyproject.toml  requirements.txt  run.bat
src/: __init__.py  main.py
src/core/: __init__.py  account_extractor.py  config.py  joiner.py  pipeline.py  sheet_reader.py  writer.py
src/gui/: __init__.py  app.py
src/utils/: __init__.py  logging_setup.py  paths.py
tests/: conftest.py  test_account_extractor.py  test_joiner.py  test_pipeline.py  test_sheet_reader.py  test_variable_records.py  test_writer_idempotency.py
