[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlsx-aggregator"
version = "0.1.0"
description = "Desktop app for XLSX aggregation and account joining"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl==3.1.5",
  "pandas>=2.2.3,<3.1",
  "customtkinter==5.2.2",
  "loguru==0.7.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
